# open-mythos-edge

./: README.md  pyproject.toml
src/open_mythos_edge/: __init__.py  config.py  model.py  variants.py
