[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-mythos-edge"
version = "0.1.0"
description = "Edge-optimized OpenMythos Recurrent-Depth Transformer for ARM64/Jetson devices"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["torch>=2.0.0"]

[project.urls]
Repository = "https://github.com/SuperInstance/open-mythos-edge"

[tool.hatch.build.targets.wheel]
packages = ["src/open_mythos_edge"]
